# edict

./: .gitignore  CMakeLists.txt  LICENCE  README.md
.github/workflows/: ci.yml  pages.yml
cmake/: edictConfig.cmake.in
docs/: _config.yml  architecture.md  blackboard.md  broadcaster.md  channels.md  examples.md  getting-started.md  guide.md  how-to.md  index.md  threading.md
examples/: CMakeLists.txt
examples/blackboard/: CMakeLists.txt  main.cpp
examples/broadcaster/: CMakeLists.txt  main.cpp
examples/game-events/: CMakeLists.txt  main.cpp
examples/hello-world/: CMakeLists.txt  main.cpp
examples/queued-dispatch/: CMakeLists.txt  main.cpp
examples/red-blue/: CMakeLists.txt  blue.h  main.cpp  red.h
examples/threaded/: CMakeLists.txt  main.cpp
examples/wildcards/: CMakeLists.txt  main.cpp
experiments/: CMakeLists.txt
experiments/tuple-test/: CMakeLists.txt  main.cpp
include/edict/: Blackboard.h  Broadcaster.h  Callable.h  Channel.h  Error.h  Policy.h  Single.h  Subscription.h  TopicRouter.h  edict.h  global.h
include/edict/detail/: TopicRouter.h  TopicTree.h  Traits.h
src/: CMakeLists.txt
src/edict-base/: Broadcaster.cpp  Broadcaster.h  CMakeLists.txt
test/: CMakeLists.txt  test_blackboard.cpp  test_broadcaster.cpp  test_channel.cpp  test_filter.cpp  test_free_functions.cpp  test_policy.cpp  test_reentrancy.cpp  test_retain.cpp  test_subscription.cpp  test_threading.cpp  test_topic_router.cpp  test_topic_tree.cpp  test_traits.cpp
tests/: CMakeLists.txt
tests/basic-test/: CMakeLists.txt  test.cpp
